Different preprocessor for each label.

--- a/flu_shot_learning-GENERAL.ipynb
+++ b/flu_shot_learning-GENERAL.ipynb
@@ -88,15 +88,19 @@
     "\n",
     "    #df['general_behavior'] = pd.Series(np.zeros(df.shape[0]), index = df.index)\n",
     "    #for b_col in behavioral_cols:\n",
-    "    #   df['general_behavior'] += df[b_col]\n",
-    "        \n",
+    "    #    df['general_behavior'] += df[b_col]\n",
+    "    \n",
     "    df['general_effective'] = df['opinion_h1n1_vacc_effective'] + df['opinion_seas_vacc_effective']\n",
     "\n",
     "    df['general_risk'] = df['opinion_h1n1_risk'] + df['opinion_seas_risk']\n",
     "    \n",
     "    df['general_eff_risk'] = df['general_effective'] + df['general_risk']\n",
     "    \n",
-    "    df['general_reccomendation'] = df['doctor_recc_h1n1'] + df['doctor_recc_seasonal']"
+    "    df['general_reccomendation'] = df['doctor_recc_h1n1'] + df['doctor_recc_seasonal']\n",
+    "    \n",
+    "    df['general_h1n1_info'] = df['h1n1_concern'] + df['h1n1_knowledge']\n",
+    "    \n",
+    "    df['household_total'] = df['household_adults'] + df['household_children'] + df['child_under_6_months'] + 1"
    ]
   },
   {
@@ -112,7 +116,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "preprocessor = pickle.load(open('models\\\\preprocessor.pkl', 'rb'))"
+    "preprocessor_seas = pickle.load(open('models\\\\preprocessor_seas.pkl', 'rb'))\n",
+    "preprocessor_h1n1 = pickle.load(open('models\\\\preprocessor_h1n1.pkl', 'rb'))"
    ]
   },
   {
@@ -147,10 +152,10 @@
    "source": [
     "from sklearn.pipeline import Pipeline\n",
     "\n",
-    "full_pipeline_h1n1 = Pipeline(steps=[('preprocessor', preprocessor),\n",
+    "full_pipeline_h1n1 = Pipeline(steps=[('preprocessor', preprocessor_h1n1),\n",
     "                                     ('estimator', estimator_h1n1)])\n",
     "\n",
-    "full_pipeline_seas = Pipeline(steps=[('preprocessor', preprocessor),\n",
+    "full_pipeline_seas = Pipeline(steps=[('preprocessor', preprocessor_seas),\n",
     "                                     ('estimator', estimator_seas)])"
    ]
   },
@@ -221,7 +226,7 @@
        "                                                                min_child_weight=0.0015,\n",
        "                                                                subsample=0.9)),\n",
        "                                                ('CatBoost',\n",
-       "                                                 <catboost.core.CatBoostClassifier object at 0x000001D62C04FA30>)],\n",
+       "                                                 <catboost.core.CatBoostClassifier object at 0x000001EB0F05D880>)],\n",
        "                                    n_jobs=-1, verbose=3))])"
       ]
      },
@@ -267,7 +272,7 @@
        "                                                                min_child_weight=0.0015,\n",
        "                                                                subsample=0.8500000000000001)),\n",
        "                                                ('CatBoost',\n",
-       "                                                 <catboost.core.CatBoostClassifier object at 0x000001D62B99B790>)],\n",
+       "                                                 <catboost.core.CatBoostClassifier object at 0x000001EB0F2BE5E0>)],\n",
        "                                    n_jobs=-1, verbose=3))])"
       ]
      },
@@ -355,32 +360,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>26707</td>\n",
-       "      <td>0.075280</td>\n",
-       "      <td>0.155117</td>\n",
+       "      <td>0.077756</td>\n",
+       "      <td>0.181935</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>26708</td>\n",
-       "      <td>0.064961</td>\n",
-       "      <td>0.075245</td>\n",
+       "      <td>0.062227</td>\n",
+       "      <td>0.078608</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>26709</td>\n",
-       "      <td>0.314402</td>\n",
-       "      <td>0.779881</td>\n",
+       "      <td>0.320616</td>\n",
+       "      <td>0.698585</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>26710</td>\n",
-       "      <td>0.680957</td>\n",
-       "      <td>0.891938</td>\n",
+       "      <td>0.648832</td>\n",
+       "      <td>0.889042</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>26711</td>\n",
-       "      <td>0.247933</td>\n",
-       "      <td>0.424343</td>\n",
+       "      <td>0.221183</td>\n",
+       "      <td>0.369551</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -391,32 +396,32 @@
        "    <tr>\n",
        "      <th>26703</th>\n",
        "      <td>53410</td>\n",
-       "      <td>0.383297</td>\n",
-       "      <td>0.521872</td>\n",
+       "      <td>0.374997</td>\n",
+       "      <td>0.525502</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26704</th>\n",
        "      <td>53411</td>\n",
-       "      <td>0.100958</td>\n",
-       "      <td>0.249524</td>\n",
+       "      <td>0.093030</td>\n",
+       "      <td>0.182782</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26705</th>\n",
        "      <td>53412</td>\n",
-       "      <td>0.091140</td>\n",
-       "      <td>0.140031</td>\n",
+       "      <td>0.088503</td>\n",
+       "      <td>0.144772</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26706</th>\n",
        "      <td>53413</td>\n",
-       "      <td>0.075090</td>\n",
-       "      <td>0.305382</td>\n",
+       "      <td>0.076497</td>\n",
+       "      <td>0.304003</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26707</th>\n",
        "      <td>53414</td>\n",
-       "      <td>0.522983</td>\n",
-       "      <td>0.611522</td>\n",
+       "      <td>0.491899</td>\n",
+       "      <td>0.639679</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -425,17 +430,17 @@
       ],
       "text/plain": [
        "       respondent_id  h1n1_vaccine  seasonal_vaccine\n",
-       "0              26707      0.075280          0.155117\n",
-       "1              26708      0.064961          0.075245\n",
-       "2              26709      0.314402          0.779881\n",
-       "3              26710      0.680957          0.891938\n",
-       "4              26711      0.247933          0.424343\n",
+       "0              26707      0.077756          0.181935\n",
+       "1              26708      0.062227          0.078608\n",
+       "2              26709      0.320616          0.698585\n",
+       "3              26710      0.648832          0.889042\n",
+       "4              26711      0.221183          0.369551\n",
        "...              ...           ...               ...\n",
-       "26703          53410      0.383297          0.521872\n",
-       "26704          53411      0.100958          0.249524\n",
-       "26705          53412      0.091140          0.140031\n",
-       "26706          53413      0.075090          0.305382\n",
-       "26707          53414      0.522983          0.611522\n",
+       "26703          53410      0.374997          0.525502\n",
+       "26704          53411      0.093030          0.182782\n",
+       "26705          53412      0.088503          0.144772\n",
+       "26706          53413      0.076497          0.304003\n",
+       "26707          53414      0.491899          0.639679\n",
        "\n",
        "[26708 rows x 3 columns]"
       ]
