--- a/flu_shot_learning-PREPROCESSING.ipynb
+++ b/flu_shot_learning-PREPROCESSING.ipynb
@@ -1427,7 +1427,8 @@
     "\n",
     "missing_values_df.drop('income_poverty', axis = 0, inplace = True)\n",
     "\n",
-    "ordinal_cols = ['income_poverty']"
+    "ordinal_cols_seas = ['income_poverty']\n",
+    "ordinal_cols_h1n1 = ['income_poverty']"
    ]
   },
   {
@@ -1451,7 +1452,8 @@
     "                           ('encode', OrdinalEncoder(categories=[np.array(['18+', '35+', '45+', '55+', '65+'])]))\n",
     "                          ])\n",
     "\n",
-    "ordinal_cols.extend(['education', 'age_group'])"
+    "ordinal_cols_seas.extend(['education', 'age_group'])\n",
+    "ordinal_cols_h1n1.extend(['education', 'age_group'])"
    ]
   },
   {
@@ -1477,27 +1479,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "employment_industry_order = ['rucpziij',\n",
-    "                             'xicduogh',\n",
-    "                             'saaquncn',\n",
-    "                             'mcubkhph',\n",
-    "                             'nduyfdeo',\n",
-    "                             'vjjrobsf',\n",
-    "                             'xqicxuve',\n",
-    "                             'phxvnwax',\n",
-    "                             'pxcmvdjn',\n",
-    "                             'dotnnunm',\n",
-    "                             'cfqqtusy',\n",
-    "                             'atmlpfrs',\n",
-    "                             'ldnlellj',\n",
-    "                             'wlfvacwt',\n",
-    "                             'mfikgejo',\n",
-    "                             'wxleyezf',\n",
-    "                             'msuufmds',\n",
-    "                             'arjwrbjb',\n",
-    "                             'qnlwzans',\n",
-    "                             'fcxhlnwr',\n",
-    "                             'haxffmxo']"
+    "industry_order_seas = ['rucpziij',\n",
+    "                     'xicduogh',\n",
+    "                     'saaquncn',\n",
+    "                     'mcubkhph',\n",
+    "                     'nduyfdeo',\n",
+    "                     'vjjrobsf',\n",
+    "                     'xqicxuve',\n",
+    "                     'phxvnwax',\n",
+    "                     'pxcmvdjn',\n",
+    "                     'dotnnunm',\n",
+    "                     'cfqqtusy',\n",
+    "                     'atmlpfrs',\n",
+    "                     'ldnlellj',\n",
+    "                     'wlfvacwt',\n",
+    "                     'mfikgejo',\n",
+    "                     'wxleyezf',\n",
+    "                     'msuufmds',\n",
+    "                     'arjwrbjb',\n",
+    "                     'qnlwzans',\n",
+    "                     'fcxhlnwr',\n",
+    "                     'haxffmxo']\n",
+    "\n",
+    "occupation_order_seas = ['qxajmpny',\n",
+    "                         'uqqtjvyb',\n",
+    "                         'tfqavkke',\n",
+    "                         'pvmttkik',\n",
+    "                         'rcertsgn',\n",
+    "                         'xqwwgdyp',\n",
+    "                         'xgwztkwe',\n",
+    "                         'ukymxvdu',\n",
+    "                         'ccgxvspp',\n",
+    "                         'vlluhbov',\n",
+    "                         'oijqvulv',\n",
+    "                         'kldqjyjy',\n",
+    "                         'xtkaffoo',\n",
+    "                         'dlvbwzss',\n",
+    "                         'hfxkjkmi',\n",
+    "                         'mxkfnird',\n",
+    "                         'hodpvpew',\n",
+    "                         'bxpfxfdn',\n",
+    "                         'emcorrxb',\n",
+    "                         'xzmlyyjv',\n",
+    "                         'haliazsg',\n",
+    "                         'cmhcxjea',\n",
+    "                         'dcjcmpih']"
    ]
   },
   {
@@ -1506,29 +1532,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "employment_occupation_order = ['qxajmpny',\n",
-    "                             'uqqtjvyb',\n",
-    "                             'tfqavkke',\n",
-    "                             'pvmttkik',\n",
-    "                             'rcertsgn',\n",
-    "                             'xqwwgdyp',\n",
-    "                             'xgwztkwe',\n",
-    "                             'ukymxvdu',\n",
-    "                             'ccgxvspp',\n",
-    "                             'vlluhbov',\n",
-    "                             'oijqvulv',\n",
-    "                             'kldqjyjy',\n",
-    "                             'xtkaffoo',\n",
-    "                             'dlvbwzss',\n",
-    "                             'hfxkjkmi',\n",
-    "                             'mxkfnird',\n",
-    "                             'hodpvpew',\n",
-    "                             'bxpfxfdn',\n",
-    "                             'emcorrxb',\n",
-    "                             'xzmlyyjv',\n",
-    "                             'haliazsg',\n",
-    "                             'cmhcxjea',\n",
-    "                             'dcjcmpih']"
+    "industry_order_h1n1 = ['dotnnunm',\n",
+    "                     'xicduogh',\n",
+    "                     'atmlpfrs',\n",
+    "                     'mcubkhph',\n",
+    "                     'vjjrobsf',\n",
+    "                     'wlfvacwt',\n",
+    "                     'pxcmvdjn',\n",
+    "                     'xqicxuve',\n",
+    "                     'rucpziij',\n",
+    "                     'cfqqtusy',\n",
+    "                     'msuufmds',\n",
+    "                     'mfikgejo',\n",
+    "                     'phxvnwax',\n",
+    "                     'nduyfdeo',\n",
+    "                     'saaquncn',\n",
+    "                     'ldnlellj',\n",
+    "                     'qnlwzans',\n",
+    "                     'arjwrbjb',\n",
+    "                     'wxleyezf',\n",
+    "                     'fcxhlnwr',\n",
+    "                     'haxffmxo']\n",
+    "\n",
+    "occupation_order_h1n1 = ['rcertsgn',\n",
+    "                         'qxajmpny',\n",
+    "                         'uqqtjvyb',\n",
+    "                         'xgwztkwe',\n",
+    "                         'xqwwgdyp',\n",
+    "                         'pvmttkik',\n",
+    "                         'tfqavkke',\n",
+    "                         'ccgxvspp',\n",
+    "                         'hfxkjkmi',\n",
+    "                         'mxkfnird',\n",
+    "                         'oijqvulv',\n",
+    "                         'ukymxvdu',\n",
+    "                         'vlluhbov',\n",
+    "                         'xzmlyyjv',\n",
+    "                         'xtkaffoo',\n",
+    "                         'kldqjyjy',\n",
+    "                         'emcorrxb',\n",
+    "                         'hodpvpew',\n",
+    "                         'bxpfxfdn',\n",
+    "                         'dlvbwzss',\n",
+    "                         'haliazsg',\n",
+    "                         'cmhcxjea',\n",
+    "                         'dcjcmpih']"
    ]
   },
   {
@@ -1537,15 +1585,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "employment_industry_pipe = Pipeline(steps=[('impute', imputer_most_frequent),\n",
-    "                                 ('encode', OrdinalEncoder(categories=[np.array(employment_industry_order)]))\n",
+    "industry_pipe_seas = Pipeline(steps=[('impute', imputer_most_frequent),\n",
+    "                                 ('encode', OrdinalEncoder(categories=[np.array(industry_order_seas)]))\n",
     "                                ])\n",
     "\n",
-    "employment_occupation_pipe = Pipeline(steps=[('impute', imputer_most_frequent),\n",
-    "                           ('encode', OrdinalEncoder(categories=[np.array(employment_occupation_order)]))\n",
+    "occupation_pipe_seas = Pipeline(steps=[('impute', imputer_most_frequent),\n",
+    "                           ('encode', OrdinalEncoder(categories=[np.array(occupation_order_seas)]))\n",
     "                          ])\n",
     "\n",
-    "#ordinal_cols.extend(['employment_industry', 'employment_occupation'])"
+    "ordinal_cols_seas.extend(['employment_industry', 'employment_occupation'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "industry_pipe_h1n1 = Pipeline(steps=[('impute', imputer_most_frequent),\n",
+    "                                 ('encode', OrdinalEncoder(categories=[np.array(industry_order_h1n1)]))\n",
+    "                                ])\n",
+    "\n",
+    "occupation_pipe_h1n1 = Pipeline(steps=[('impute', imputer_most_frequent),\n",
+    "                           ('encode', OrdinalEncoder(categories=[np.array(occupation_order_h1n1)]))\n",
+    "                          ])\n",
+    "\n",
+    "#ordinal_cols_h1n1.extend(['employment_industry', 'employment_occupation'])"
    ]
   },
   {
@@ -1557,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1606,7 +1671,7 @@
        "doctor_recc_seasonal              2160                8.09"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1617,7 +1682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1731,7 @@
        "1.0       5408       8094"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1685,7 +1750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1706,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1715,26 +1780,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "categorical_cols = [col for col in X_train_full.columns if X_train_full[col].dtype == 'object' \n",
-    "                    and col not in cols_drop and col not in ordinal_cols]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "categorical_cols.extend(cols_drop)"
+    "categorical_cols_seas = [col for col in X_train_full.columns if X_train_full[col].dtype == 'object' \n",
+    "                         and col not in cols_drop and col not in ordinal_cols_seas]\n",
+    "\n",
+    "categorical_cols_h1n1 = [col for col in X_train_full.columns if X_train_full[col].dtype == 'object' \n",
+    "                         and col not in cols_drop and col not in ordinal_cols_h1n1]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_cols_seas.extend(cols_drop)\n",
+    "categorical_cols_h1n1.extend(cols_drop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1747,12 +1816,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "numerical_cols = [col for col in X_train_full.columns if col not in categorical_cols\n",
-    "                  and col not in cols_drop and col not in ordinal_cols]"
+    "numerical_cols_seas = [col for col in X_train_full.columns if col not in categorical_cols_seas\n",
+    "                       and col not in cols_drop and col not in ordinal_cols_seas]\n",
+    "\n",
+    "numerical_cols_h1n1 = [col for col in X_train_full.columns if col not in categorical_cols_h1n1\n",
+    "                       and col not in cols_drop and col not in ordinal_cols_h1n1]"
    ]
   },
   {
@@ -1778,7 +1850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1793,24 +1865,19 @@
     "\n",
     "    #df['general_behavior'] = pd.Series(np.zeros(df.shape[0]), index = df.index)\n",
     "    #for b_col in behavioral_cols:\n",
-    "    #   df['general_behavior'] += df[b_col]\n",
-    "        \n",
+    "    #    df['general_behavior'] += df[b_col]\n",
+    "    \n",
     "    df['general_effective'] = df['opinion_h1n1_vacc_effective'] + df['opinion_seas_vacc_effective']\n",
     "\n",
     "    df['general_risk'] = df['opinion_h1n1_risk'] + df['opinion_seas_risk']\n",
     "    \n",
     "    df['general_eff_risk'] = df['general_effective'] + df['general_risk']\n",
     "    \n",
-    "    df['general_reccomendation'] = df['doctor_recc_h1n1'] + df['doctor_recc_seasonal']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "engineer_features(X_train_full)"
+    "    df['general_reccomendation'] = df['doctor_recc_h1n1'] + df['doctor_recc_seasonal']\n",
+    "    \n",
+    "    df['general_h1n1_info'] = df['h1n1_concern'] + df['h1n1_knowledge']\n",
+    "    \n",
+    "    df['household_total'] = df['household_adults'] + df['household_children'] + df['child_under_6_months'] + 1"
    ]
   },
   {
@@ -1819,12 +1886,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "engineer_features(X_train_full)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "engineered_features = ['general_effective',\n",
     "                       'general_risk',\n",
     "                       'general_eff_risk',\n",
-    "                       'general_reccomendation']\n",
+    "                       'general_reccomendation',\n",
+    "                       'general_h1n1_info',\n",
+    "                       'household_total']\n",
     "\n",
-    "numerical_cols.extend(engineered_features)"
+    "numerical_cols_seas.extend(engineered_features)\n",
+    "numerical_cols_h1n1.extend(engineered_features)"
    ]
   },
   {
@@ -1838,31 +1917,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "ColTransf = ColumnTransformer([('numerical_cols', imputer_most_frequent, numerical_cols),\n",
-    "                                  ('categorical_cols', cat_preprocessor, categorical_cols),\n",
+    "ColTransf_seas = ColumnTransformer([('numerical_cols', imputer_most_frequent, numerical_cols_seas),\n",
+    "                                  ('categorical_cols', cat_preprocessor, categorical_cols_seas),\n",
+    "                                  ('income', income_pipe, ['income_poverty']),\n",
+    "                                  ('education', education_pipe, ['education']),\n",
+    "                                  ('age', age_pipe, ['age_group']),\n",
+    "                                  ('industry', industry_pipe_seas, ['employment_industry']),\n",
+    "                                  ('occupation', occupation_pipe_seas, ['employment_occupation'])])\n",
+    "\n",
+    "ColTransf_h1n1 = ColumnTransformer([('numerical_cols', imputer_most_frequent, numerical_cols_h1n1),\n",
+    "                                  ('categorical_cols', cat_preprocessor, categorical_cols_h1n1),\n",
     "                                  ('income', income_pipe, ['income_poverty']),\n",
     "                                  ('education', education_pipe, ['education']),\n",
     "                                  ('age', age_pipe, ['age_group'])])\n",
     "\n",
-    "preprocessor = Pipeline(steps=[('ColTransf', ColTransf),\n",
+    "preprocessor_seas = Pipeline(steps=[('ColTransf', ColTransf_seas),\n",
+    "                               ('Scaler', StandardScaler())])\n",
+    "\n",
+    "preprocessor_h1n1 = Pipeline(steps=[('ColTransf', ColTransf_h1n1),\n",
     "                               ('Scaler', StandardScaler())])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train_preprocessed = pd.DataFrame(preprocessor.fit_transform(X_train_full), index = X_train_full.index)\n",
-    "X_train_preprocessed.to_csv('interim_data\\\\preprocessed_train_features.csv')"
    ]
   },
   {
@@ -1871,7 +1951,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(preprocessor, open('models\\\\preprocessor.pkl', 'wb'))"
+    "X_train_preprocessed = pd.DataFrame(preprocessor_seas.fit_transform(X_train_full), index = X_train_full.index)\n",
+    "X_train_preprocessed.to_csv('interim_data\\\\preprocessed_train_features_seas.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_preprocessed = pd.DataFrame(preprocessor_h1n1.fit_transform(X_train_full), index = X_train_full.index)\n",
+    "X_train_preprocessed.to_csv('interim_data\\\\preprocessed_train_features_h1n1.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(preprocessor_seas, open('models\\\\preprocessor_seas.pkl', 'wb'))\n",
+    "pickle.dump(preprocessor_h1n1, open('models\\\\preprocessor_h1n1.pkl', 'wb'))"
    ]
   }
  ],
